# vtl

./: CMakeLists.txt  main.c  run.bat  run.sh  test.html  Модуль субтитров.docx  Рекомендации.txt
VTL/: VTL.h  VTL_app_result.h  VTL_content_platform_flags.h  VTL_content_platform_postfixes.h  VTL_context.h  VTL_converter.c  VTL_converter.h  VTL_file_ops.c  VTL_file_ops.h  VTL_markup_types.h  VTL_publication_markup_text_flags.c  VTL_publication_markup_text_flags.h  main.c
VTL/content_platform/: VTL_content_platform_flags_check.c  VTL_content_platform_flags_check.h  VTL_content_platform_publication.c  VTL_content_platform_publication.h
VTL/content_platform/infra/: VTL_content_platform_infra.h
VTL/content_platform/infra/audio/: VTL_audio_configs_for_gen_init.c  VTL_audio_configs_for_gen_init.h  VTL_audio_gen.c  VTL_audio_gen.h
VTL/content_platform/infra/text/: VTL_publication_text_gen.c  VTL_publication_text_gen.h  VTL_text_configs_for_gen_init.c  VTL_text_configs_for_gen_init.h
VTL/content_platform/tg/: VTL_content_platform_tg_net.c  VTL_content_platform_tg_net.h  VTL_content_platform_tg_publication.h
VTL/content_platform/tg/media_container_params/: VTL_content_platform_tg_params_audio.c  VTL_content_platform_tg_params_audio.h  VTL_content_platform_tg_params_sub.c  VTL_content_platform_tg_params_sub.h  VTL_content_platform_tg_params_video.c  VTL_content_platform_tg_params_video.h
VTL/history_administration/: VTL_history_administration.h  VTL_history_administration_data.h
VTL/history_administration/db/: VTL_history_administration_create.h
VTL/history_administration/io/: VTL_history_administration_show.h
VTL/media_container/: VTL_media_container.h  VTL_media_container_data.h  VTL_video_sub_burner.c  VTL_video_sub_burner.h
VTL/media_container/audio/: VTL_audio.h  VTL_audio_data.c  VTL_audio_data.h
VTL/media_container/audio/infra/: VTL_audio_config.h  VTL_audio_file.h  VTL_audio_read.c  VTL_audio_read.h  VTL_audio_write.c  VTL_audio_write.h
VTL/media_container/img/: VTL_img.h  VTL_img_blur.c  VTL_img_blur.h  VTL_img_data.c  VTL_img_data.h  VTL_img_load.c  VTL_img_ops.c
VTL/media_container/img/infra/: VTL_img_config.c  VTL_img_config.h  VTL_img_file.c  VTL_img_file.h  VTL_img_load.h  VTL_img_read.c  VTL_img_read.h  VTL_img_save.c  VTL_img_save.h  VTL_img_write.c  VTL_img_write.h
VTL/media_container/sub/: VTL_sub.h  VTL_sub_burn.c  VTL_sub_burn.h  VTL_sub_convert.c  VTL_sub_data.c  VTL_sub_data.h  VTL_sub_parse.c  VTL_sub_parse.h  VTL_sub_style.c  VTL_sub_style.h
VTL/media_container/sub/infra/: VTL_sub_read.c  VTL_sub_read.h  VTL_sub_srt.c  VTL_sub_srt.h  VTL_sub_write.c  VTL_sub_write.h
VTL/media_container/sub/opencl/: CMakeLists.txt  VTL_sub_opencl_apply_ass_style.c  VTL_sub_opencl_apply_ass_style.h  VTL_sub_opencl_clean_tags.c  VTL_sub_opencl_clean_tags.h  VTL_sub_opencl_detect_encoding.c  VTL_sub_opencl_detect_encoding.h  VTL_sub_opencl_format_numbers.c  VTL_sub_opencl_format_numbers.h  VTL_sub_opencl_format_time.c  VTL_sub_opencl_format_time.h  VTL_sub_opencl_hash_strings.c  VTL_sub_opencl_hash_strings.h  VTL_sub_opencl_split_long_lines.c  VTL_sub_opencl_split_long_lines.h  VTL_sub_opencl_squeeze_repeats.c  VTL_sub_opencl_squeeze_repeats.h  VTL_sub_opencl_string_stats.c  VTL_sub_opencl_string_stats.h  VTL_sub_opencl_strip_tags.c  VTL_sub_opencl_strip_tags.h
VTL/media_container/video/: VTL_video.h  VTL_video_data.c  VTL_video_data.h
VTL/publication/: VTL_publication.c  VTL_publication.h  VTL_publication_data.h
VTL/publication/text/: VTL_publication_markup_text_flags_check.c  VTL_publication_text.c  VTL_publication_text.h  VTL_publication_text_data.c  VTL_publication_text_data.h  VTL_publication_text_op.c  VTL_publication_text_op.h
VTL/publication/text/bbcode/: VTL_publication_text_op_bbcode.c  VTL_publication_text_op_bbcode.h
VTL/publication/text/infra/: VTL_publication_text_gen.c  VTL_publication_text_gen.h  VTL_publication_text_read.c  VTL_publication_text_read.h  VTL_publication_text_write.c  VTL_publication_text_write.h
VTL/test/: CMakeLists.txt  VTL_test.c  VTL_test_data.c  main_sub_style_demo.c
VTL/test/data/: output.ass
VTL/user/: VTL_user.h  VTL_user_data.c  VTL_user_data.h
VTL/user/history/: VTL_user_history.h  VTL_user_history_data.c  VTL_user_history_data.h
VTL/user/history/db/: VTL_user_history_credentals.c  VTL_user_history_credentals.h  (+2 more)
VTL/utils/: VTL_buffer_data.h  VTL_encryptor.c  VTL_encryptor.h  VTL_file.c  VTL_file.h  VTL_string.h  VTL_time.c  VTL_time.h  VTL_utils.h
VTL/utils/curl/: VTL_http_client.c  VTL_http_client.h
VTL/utils/db/: VTL_db_credentals.c  VTL_db_credentals.h
VTL/utils/log/: VTL_console.c  VTL_console.h  VTL_console_log.c  VTL_console_log.h
cmake/: FFmpeg.cmake
doc/: test_img_processing.c
vtl_tests/: CMakeLists.txt  VTL_test_data.c  VTL_test_data.h
vtl_tests/audio/: CMakeLists.txt  VTL_audio_data_unit.c
vtl_tests/bbcode/: CMakeLists.txt  VTL_bbcode_op_unit.c
vtl_tests/img/: CMakeLists.txt  VTL_img_unit.c
vtl_tests/publication/: CMakeLists.txt  VTL_publication_unit.c
vtl_tests/text/: CMakeLists.txt  VTL_text_file_io_unit.c  VTL_text_unit.c  test.html
vtl_tests/video/: CMakeLists.txt  VTL_frame_interpolation_unit.c
