add_library(VTL_sub_opencl_clean_tags OBJECT VTL_sub_opencl_clean_tags.c)
add_library(VTL_sub_opencl_strip_tags OBJECT VTL_sub_opencl_strip_tags.c)
add_library(VTL_sub_opencl_hash_strings OBJECT VTL_sub_opencl_hash_strings.c)
add_library(VTL_sub_opencl_string_stats OBJECT VTL_sub_opencl_string_stats.c)
add_library(VTL_sub_opencl_format_time OBJECT VTL_sub_opencl_format_time.c)
add_library(VTL_sub_opencl_apply_ass_style OBJECT VTL_sub_opencl_apply_ass_style.c)
add_library(VTL_sub_opencl_squeeze_repeats OBJECT VTL_sub_opencl_squeeze_repeats.c)
add_library(VTL_sub_opencl_format_numbers OBJECT VTL_sub_opencl_format_numbers.c)
add_library(VTL_sub_opencl_split_long_lines OBJECT VTL_sub_opencl_split_long_lines.c) 